# hhd

./: .gitignore  LICENSE  MANIFEST.in  PKGBUILD  adjustor.spec  alib.md  faq.md  hhd-git.spec  hhd.spec  hhd_cmd.sh  hhdrel.sh  install.sh  kernel.md  legion_go_acpid.md  local_hhd.sh  locale.pot  pyproject.toml  readme.md  requirements.in  sync.sh  tst.py  tst_hid.py  uninstall.sh
.github/workflows/: aur-publish.yml  package-publish.yml  publish-aur.yml  publish-copr.yml  publish-nobara.yml  publish-pipy.yml  python-publish.yml
docs/: http.md
i18n/: adjustor.pot  babel.cfg  hhd.pot  template.pot
i18n/de/LC_MESSAGES/: adjustor.po  hhd.po
i18n/el/LC_MESSAGES/: adjustor.po  hhd.po
i18n/el_gr/LC_MESSAGES/: hhd.po
i18n/es/LC_MESSAGES/: adjustor.po  hhd.po
i18n/es_mx/LC_MESSAGES/: hhd.po
i18n/fr/LC_MESSAGES/: adjustor.po  hhd.po
i18n/it_IT/LC_MESSAGES/: adjustor.po  hhd.po
i18n/ja/LC_MESSAGES/: adjustor.po  hhd.po
i18n/ko/LC_MESSAGES/: adjustor.po  hhd.po
i18n/nb_NO/LC_MESSAGES/: adjustor.po
i18n/pt/LC_MESSAGES/: adjustor.po  hhd.po
i18n/pt_BR/LC_MESSAGES/: adjustor.po  hhd.po
i18n/pt_br/LC_MESSAGES/: hhd.po
i18n/ru/LC_MESSAGES/: hhd.po
i18n/ru_RU/LC_MESSAGES/: adjustor.po  hhd.po
i18n/uk/LC_MESSAGES/: adjustor.po  hhd.po
i18n/vi/LC_MESSAGES/: adjustor.po  hhd.po
i18n/zh/LC_MESSAGES/: adjustor.po  hhd.po
i18n/zh_CN/LC_MESSAGES/: adjustor.po  hhd.po
i18n/zh_TW/LC_MESSAGES/: adjustor.po  hhd.po
i18n/zh_cn/LC_MESSAGES/: hhd.po
notebooks/: hidraw.ipynb  test.ipynb
src/adjustor/: __main__.py  events.py  hhd.py  i18n.py  legiongo.py  settings.yml  utils.py
src/adjustor/core/: acpi.py  alib.py  amd_gpu.py  asus.py  charge_full_once.py  const.py  lenovo.py  platform.py
src/adjustor/core/fan/: __init__.py  __main__.py  alg.py  core.py  utils.py
src/adjustor/drivers/: gpd.py  gpd.yml
src/adjustor/drivers/amd/: __init__.py  ppd.py  settings.yml
src/adjustor/drivers/asus/: __init__.py  settings.yml
src/adjustor/drivers/battery/: __init__.py  battery.yml
src/adjustor/drivers/general/: __init__.py  settings.yml
src/adjustor/drivers/gpu/: __init__.py  power-profiles-daemon.dbus.xml.in  settings.yml
src/adjustor/drivers/lenovo/: __init__.py  fans.yml  hhd.py  settings.yml  tdp.yml
src/adjustor/drivers/msi/: __init__.py  error.yml  settings.yml
src/adjustor/drivers/platform/: __init__.py  settings.yml
src/adjustor/drivers/smu/: __init__.py  qam.yml  smu.yml
src/adjustor/drivers/unified/: __init__.py  settings.yml  tdp.yml
src/adjustor/fuse/: __init__.py  driver.py  gpu.py  utils.py
src/hhd/: __init__.py  __main__.py  http.py  logging.py  sections.yml  settings.yml  utils.py
src/hhd/contrib/: __init__.py  __main__.py  dev.py  gs.py  hid_desc.py  i18n.py  main.py
src/hhd/contrib/hid_data/: 0000_undefined.hut  0001_generic_desktop.hut  0002_simulation_controls.hut  0003_vr_controls.hut  0004_sports_controls.hut  0005_gaming_controls.hut  0006_generic_device_controls.hut  0007_keyboard.hut  0008_leds.hut  0009_button.hut  000a_ordinals.hut  000b_telephony_devices.hut  000c_consumer_devices.hut  000d_digitizers.hut  000e_haptic_page.hut  0010_unicode.hut  0012_eye_and_head_trackers.hut  0014_auxiliary_display.hut  0020_sensor.hut  0040_medical_instruments.hut  0041_braille_display.hut  0059_lighting_and_illumination.hut  0080_monitor.hut  0081_monitor_enumerated_values.hut  0082_vesa_virtual_controls.hut  0083_vesa_command.hut  0084_power_device.hut  0085_battery_system.hut  008c_bar_code_scanner.hut  008d_scale.hut  008e_magnetic_stripe_reading.hut  0090_camera_control.hut  0091_arcade_page_oaaf.hut  0092_gaming_device.hut  f1d0_fast_identity_online_alliance.hut  ff00_vendor_defined_page_1.hut  ff0d_wacom.hut
src/hhd/controller/: __init__.py  base.py  const.py  hid.py  outputs.py  uhid.py
src/hhd/controller/lib/: ccache.py  common.py  hid.py  hide.py  ioctl.py  uhid.py
src/hhd/controller/local/: imu.py
src/hhd/controller/physical/: evdev.py  hidraw.py  imu.py  rgb.py
src/hhd/controller/virtual/: const.py  ds5.py  uinput.py
src/hhd/http/: __init__.py  api.py  ctl.py  i18n.py  index.html  steamos.py
src/hhd/i18n/: .gitignore  __init__.py
src/hhd/plugins/: __init__.py  conf.py  gyro.yml  hall_interference.yml  initial.py  inputs.py  limits.yml  outputs.py  outputs.yml  plugin.py  settings.py  touchpad.yml  utils.py
usr/lib/modprobe.d/: hhd.conf
usr/share/hhd/: controller_db.txt
usr/systemd/system/: hhd.service  hhd@.service
xbox-emulator-web/: README.md  index.html  main.js
xbox-emulator-web/xbox-emulator-web/: README.md
xbox-emulator-web/xbox-emulator-web/xbox-emulator-web/: README.md  styles.css
(+139 files in other folders)
