[project]
name = "adjustor"
version = "3.6.4"
authors = [
  { name="Kapenekakis Antheas", email="pypi@antheas.dev" },
]
description = "Adjustor, a userspace program for managing the TDP of handheld devices."
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
  "rich>=13.5.2",
  "pyroute2>=0.7.3",
  "fuse-python>=1.0.7",
  "PyGObject>=3.46.0",
  "dbus-python>=1.3.2",
]

[project.urls]
"Homepage" = "https://github.com/hhd-dev/adjustor"
"Bug Tracker" = "https://github.com/hhd-dev/adjustor/issues"

[project.entry-points."console_scripts"]
adjustor = "adjustor.__main__:main"
adj = "adjustor.__main__:main"

[project.entry-points."hhd.plugins"]
adjustor = "adjustor.hhd:autodetect"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["adjustor*"]  # package names should match these glob patterns (["*"] by default)
